# bodyserver

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  check.yml
cyclingbody/: Cargo.toml
cyclingbody/src/: lib.rs  tests.rs
src/: main.rs
